--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
     <div class="container">
       <div class="inner">
         <div class="item">
-          <img src="1.jpg" alt="" class="img" />
+          <img src="1.png" alt="" class="img" />
           <button class="btn" id="btn1">Add</button>
         </div>
         <div class="item">
-          <img src="2.jpg" alt="" class="img" />
+          <img src="2.png" alt="" class="img" />
           <button class="btn" id="btn2">Add</button>
         </div>
         <div class="item">
-          <img src="3.jpg" alt="" class="img" />
+          <img src="3.png" alt="" class="img" />
           <button class="btn" id="btn3">Add</button>
         </div>
         <div class="item">
-          <img src="4.jpg" alt="" class="img" />
+          <img src="4.png" alt="" class="img" />
           <button class="btn" id="btn4">Add</button>
         </div>
         <div class="item">
-          <img src="5.jpg" alt="" class="img" />
+          <img src="5.png" alt="" class="img" />
           <button class="btn" id="btn5">Add</button>
         </div>
         <div class="item">
-          <img src="6.jpg" alt="" class="img" />
+          <img src="6.png" alt="" class="img" />
           <button class="btn" id="btn6">Add</button>
         </div>
       </div>
